package com.tcgpocket.card;

import com.tcgpocket.action.IAction;
import com.tcgpocket.condition.Always;
import com.tcgpocket.energy.EnergyCost;
import com.tcgpocket.energy.Type;

import java.util.List;
import java.util.Objects;
import java.util.Optional;
import java.util.Set;

/**
 * A Fossil: an Item played as if it were a Basic Pokemon.
 *
 * <p>Both an {@link ITrainerCard} and an {@link IPlayableCard} because both are
 * true — card text that counts Items counts it, and on the board it has HP and
 * takes damage. Its {@code actions} are what it can do in play, which for every
 * Fossil so far is discard itself.
 *
 * <p>In play it is {@link #asPokemon()}: a Basic Colorless Pokemon of its HP,
 * with no attacks, no weakness, and its actions offered as an ability. It goes
 * to the Bench through {@code PlayCardAction} like any Basic. It is never an
 * opening Pokemon and never found by a Basic search, because both look for a
 * {@link PokemonCard}, as the rules have it. It cannot retreat, which
 * {@code RetreatAction} reads off its {@link CardTag#FOSSIL} tag. The discard
 * pile gets the Item card back, not the Pokemon it was played as.
 *
 * <p><b>Narrowed.</b> "Discard this card from play" is offered as an
 * {@link ActivatedAbility}, which it is not: an effect that stopped Abilities
 * would wrongly stop it too. None exists yet. A Fossil-specific
 * {@code IAction} generated by the engine would fix it.
 */
public record PlayableItemCard(
        String id,
        String name,
        String description,
        Set<CardTag> tags,
        List<IAction> actions,
        int maxHp) implements IPlayableCard, ITrainerCard {

    public PlayableItemCard {
        Objects.requireNonNull(id, "id");
        Objects.requireNonNull(name, "name");
        tags = Set.copyOf(tags);
        actions = List.copyOf(actions);
        if (maxHp <= 0) {
            throw new IllegalArgumentException("maxHp must be positive, was " + maxHp);
        }
    }

    /**
     * The Basic Colorless Pokemon this is played as. Every Fossil so far has one
     * action, its discard, so only the first becomes the ability.
     */
    @Override
    public PokemonCard asPokemon() {
        Optional<IAbility> discard = actions.isEmpty()
                ? Optional.empty()
                : Optional.of(new ActivatedAbility(name, description, actions.getFirst(), false, new Always<>()));
        return new PokemonCard(id, name, description, tags, List.of(), maxHp, 0, Set.of(Type.COLORLESS),
                Optional.empty(), EnergyCost.free(), Optional.empty(), Optional.empty(), discard,
                CardRarity.COMMON);
    }

    /** A Fossil of the given HP, tagged {@link CardTag#FOSSIL}. */
    public static PlayableItemCard fossil(String id, String name, int maxHp, IAction action) {
        return new PlayableItemCard(id, name, "", Set.of(CardTag.FOSSIL), List.of(action), maxHp);
    }
}
