package com.tcgpocket.card;

import com.tcgpocket.action.IAction;
import com.tcgpocket.energy.EnergyCost;
import com.tcgpocket.energy.Type;
import com.tcgpocket.number.INumber;

import java.util.*;

/**
 * A Pokemon as printed.
 *
 * @param actions        its attacks
 * @param stage          0 for a Basic, 1 and 2 for the evolutions
 * @param types          one or more printed types. A dual-type card counts as
 *                       both for every type-specific card text — it satisfies
 *                       {@code HasType}/{@code IsType} for either — but still
 *                       prints a single {@code weakness}.
 * @param evolvesFrom    species this evolves from; empty for a Basic
 * @param weaknessDamage extra damage when weakness applies. Always 20 in
 *                       Pocket, but kept as an {@link INumber} so the model
 *                       does not bake in one format's constant.
 */
public record PokemonCard(
        String id,
        String name,
        String description,
        Set<CardTag> tags,
        List<IAction> actions,
        int maxHp,
        int stage,
        Set<Type> types,
        Optional<String> evolvesFrom,
        EnergyCost retreatCost,
        Optional<Type> weakness,
        Optional<INumber> weaknessDamage,
        Optional<IAbility> ability,
        CardRarity rarity) implements IPlayableCard {

    public PokemonCard {
        Objects.requireNonNull(id, "id");
        Objects.requireNonNull(name, "name");
        Objects.requireNonNull(types, "types");
        Objects.requireNonNull(ability, "ability");
        tags = Set.copyOf(tags);
        actions = List.copyOf(actions);

        if (types.isEmpty()) {
            throw new IllegalArgumentException("a Pokemon must have at least one type: " + name);
        }
        // An EnumSet rather than Set.copyOf: it iterates in the enum's declaration
        // order, which is the order the types are printed in, and it collapses a
        // duplicate instead of rejecting it.
        types = Collections.unmodifiableSet(EnumSet.copyOf(types));

        if (maxHp <= 0) {
            throw new IllegalArgumentException("maxHp must be positive, was " + maxHp);
        }
        if (stage < 0) {
            throw new IllegalArgumentException("stage must not be negative, was " + stage);
        }
        if (stage == 0 && evolvesFrom.isPresent()) {
            throw new IllegalArgumentException("a Basic cannot evolve from anything: " + name);
        }
        if (stage > 0 && evolvesFrom.isEmpty()) {
            throw new IllegalArgumentException("a Stage " + stage + " must evolve from something: " + name);
        }
    }

    public boolean isBasic() {
        return stage == 0;
    }

    @Override
    public PokemonCard asPokemon() {
        return this;
    }

    /** Minimal Basic, for tests and for cards with nothing unusual about them. */
    public static PokemonCard basic(String id, String name, String description, int maxHp, Type type, EnergyCost retreatCost, CardRarity rarity) {
        return new PokemonCard(
                id, name, description, Set.of(), List.of(), maxHp, 0, Set.of(type),
                Optional.empty(), retreatCost, Optional.empty(), Optional.empty(), Optional.empty(), rarity);
    }

    /** The same, with attacks. */
    public static PokemonCard basic(
            String id, String name, String description, int maxHp, Type type, EnergyCost retreatCost, List<IAction> actions, CardRarity rarity) {
        return new PokemonCard(
                id, name, description, Set.of(), actions, maxHp, 0, Set.of(type),
                Optional.empty(), retreatCost, Optional.empty(), Optional.empty(), Optional.empty(), rarity);
    }

    /** A Stage 1 or 2, which may only be played onto the species it evolves from. */
    public static PokemonCard evolution(
            String id, String name, String description, int stage, String evolvesFrom,
            int maxHp, Type type, EnergyCost retreatCost, List<IAction> actions, CardRarity rarity) {
        return new PokemonCard(
                id, name, description, Set.of(), actions, maxHp, stage, Set.of(type),
                Optional.of(evolvesFrom), retreatCost, Optional.empty(), Optional.empty(), Optional.empty(), rarity);
    }

    /* ------------------------------------------------------------------ */
    /* Terse forms                                                         */
    /*                                                                     */
    /* For tests and for sketching a card before its printed detail is     */
    /* transcribed. Flavour text is empty, the rarity is COMMON, and the   */
    /* retreat cost is the colorless count that every Pocket printing so   */
    /* far actually uses. They disambiguate from the full forms on the     */
    /* third parameter: int here, String there.                            */
    /* ------------------------------------------------------------------ */

    public static PokemonCard basic(String id, String name, int maxHp, Type type, int retreatCost) {
        return basic(id, name, maxHp, type, retreatCost, List.of());
    }

    public static PokemonCard basic(
            String id, String name, int maxHp, Type type, int retreatCost, List<IAction> actions) {
        return basic(id, name, "", maxHp, type, colorless(retreatCost), actions, CardRarity.COMMON);
    }

    public static PokemonCard evolution(
            String id, String name, int stage, String evolvesFrom,
            int maxHp, Type type, int retreatCost, List<IAction> actions) {
        return evolution(id, name, "", stage, evolvesFrom, maxHp, type,
                colorless(retreatCost), actions, CardRarity.COMMON);
    }

    /** A retreat cost of n, payable by any n energy — which is every one so far. */
    private static EnergyCost colorless(int count) {
        return count == 0 ? EnergyCost.free() : EnergyCost.of(Type.COLORLESS, count);
    }

    public PokemonCard withAbility(IAbility newAbility) {
        return new PokemonCard(id, name, description, tags, actions, maxHp, stage, types,
                evolvesFrom, retreatCost, weakness, weaknessDamage, Optional.of(newAbility), rarity);
    }

    public PokemonCard withTags(CardTag... newTags) {
        return new PokemonCard(id, name, description, Set.of(newTags), actions, maxHp, stage, types,
                evolvesFrom, retreatCost, weakness, weaknessDamage, ability, rarity);
    }

    public PokemonCard withWeakness(Type weakTo) {
        return new PokemonCard(id, name, description, tags, actions, maxHp, stage, types,
                evolvesFrom, retreatCost, Optional.of(weakTo), weaknessDamage, ability, rarity);
    }

    /**
     * Replaces the printed types — a dual-type card is written as a single-typed
     * one with this chained onto it, in the style of {@link #withWeakness}.
     *
     * <p>A dual type still prints one weakness, so {@code withWeakness} is
     * unaffected; what changes is that the card now counts as both types for
     * every card text that names a type.
     */
    public PokemonCard withTypes(Type... newTypes) {
        return new PokemonCard(id, name, description, tags, actions, maxHp, stage,
                new LinkedHashSet<>(Arrays.asList(newTypes)),
                evolvesFrom, retreatCost, weakness, weaknessDamage, ability, rarity);
    }
}
