@startuml
title Card definitions (immutable, one per printed card)

skinparam linetype ortho

interface ICard <<sealed>> {
    - name: String
    - description: String
    - id: String
    /' Replaces the "will also need tags to track mega, EX, ..." TODO.
       Needed by the rules: knocking out an EX awards 2 points. '/
    - tags: Set<CardTag>
    - actions: List<IAction>
}

enum CardTag {
    EX
    MEGA
    FOSSIL
    ULTRA_BEAST
}

interface IPlayableCard extends ICard {
    /' Renamed from `hp`, which was ambiguous against INumber's MaxHP and
       CurrentHP. Current HP is damage taken off maxHp, tracked per instance
       on PokemonInPlay. Status and tool likewise moved to the instance. '/
    - maxHp: int
    /' What PokemonInPlay reads HP, type, attacks and ability from. A
       PokemonCard is itself; a Fossil is the Basic it is played as. '/
    + asPokemon(): PokemonCard
}

interface ITrainerCard extends ICard {
}

/' Fossil cards: an Item played to the Bench as a Basic Colorless Pokemon of
   its HP (asPokemon), with no attacks or weakness. Its IAction, discarding
   itself, is offered as an ActivatedAbility (Narrowed: an Ability blocker
   would wrongly stop it). RetreatAction refuses anything tagged FOSSIL. It
   is never an opening Pokemon, and the discard pile gets the Item card back. '/
class PlayableItemCard <<record>> implements IPlayableCard, ITrainerCard {}

class ItemCard <<record>> implements ITrainerCard {}

class SupporterCard <<record>> implements ITrainerCard {}

class ToolCard <<record>> implements ITrainerCard {
    - triggers: List<ITrigger>
}

class StadiumCard <<record>> implements ITrainerCard {
    - triggers: List<ITrigger>
}

class PokemonCard <<record>> implements IPlayableCard {
    - stage: int
    /' Basics have none; a Stage 1/2 may only be played onto this species. '/
    - evolvesFrom: Optional<String>
    /' One or more; most cards print one, a dual-type card two. '/
    - types: Set<Type>
    - ability: Optional<IAbility>
    - retreatCost: int
    - weakness: Optional<Type>
    /' Always +20 in Pocket; kept as an INumber so the model does not hardcode
       one format's constant. '/
    - weaknessDamage: Optional<INumber>
}

ICard o-- CardTag
ICard *-- IAction
PokemonCard o-- Type
PokemonCard o-- IAbility
ToolCard *-- ITrigger
StadiumCard *-- ITrigger

note bottom of PokemonCard
  Attacks live in `actions` as `Action`, which now carries an
  EnergyCost — previously nothing could gate an attack on
  energy at all. See IAction.puml and Energy.puml.

  `types` is a set because a dual-type card counts as both types
  for every card text that names one (HasType/IsType match on
  either). It still prints a single `weakness`, and weakness
  applies if the defender is weak to *any* of the attacker's
  types — added once, never per matching type.
end note

@enduml
